# site-gen

./: .gitignore  Cargo.toml  README.md  rss.xml  run.sh
content/: blog.sml  highlight.min.js  index.sml  main.scss  projects.sml  test.css
content/pages/: article_is_linux_too_difficult.sml
repos/: README.md  fetch.sh  gen.py  reset.sh
repos/backups/: Sat-Mar-19-18:04:34-EST-2022  Sun-Mar-20-14:28:24-EST-2022
src/: args.rs  main.rs  sml.rs
static/: all  article  index  index.html
