[package]
name = "site-gen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
notify = "4.0.17"
seahash = "4.1.0"
rsass = "0.23.4"
ignore = "0.4.18"
num_cpus = "1.13.1"
crossbeam-channel = "0.5"
crossbeam-utils = "0.8.1"
